Implement several desktop features
Desktop:
- Set AWT window class on startup
- Rename settings 'server' category to 'desktop'
- Add launch command option
- Fix settings text field reset not applying to UI